2009-03-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/MemberTests.cs:
	* MonoDevelop.CSharpBinding/TopLevelTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs:
	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs:
	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionCSharpTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionCSharp3Tests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionOperatorTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs:
	  Simplified/Performance optimized unit tests.

2009-03-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs:
	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionCSharp3Tests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs:
	  Worked on unit tests.

2009-03-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/ProjectDomTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs:
	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionCSharpTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs:
	  Worked on unit tests & project dom.

	* Makefile.am:
	* UnitTests.csproj: 

2009-03-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  test for Bug 487203 - Extension methods not working

2009-03-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  test for "Bug 487206 - Intellisense not working".

2009-03-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: added
	  test for 'Bug 487218 - var does not work with arrays'.

2009-03-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: added
	  test for bug "Bug 487228 - No intellisense for implicit