@@ -1,3 +1,10 @@
+2009-03-31  Mike Krüger  <mkrueger@novell.com>
+
+	* Makefile.am:
+	* UnitTests.csproj:
+	* MonoDevelop.Projects/DomTests.cs: Added some dom tests to
+	  help finding C#3 bugs.
+
 2009-03-27  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.CSharpBinding/MemberTests.cs:
